# moogle

./: .editorconfig  .gitignore  .pre-commit-config.yaml  BLOCKERS.md  BUILT-WITH.md  CLAUDE.md  LICENSE  Makefile  README.md  go.work  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: ci.yml  deploy-cloud-run.yml  deploy-frontend.yml  deploy-nas.yml  deploy-workers.yml  scheduled-eval.yml  scheduled-interleaving.yml  scheduled-load-test.yml  scheduled-ltr-train.yml  scheduled-pa11y.yml  scheduled-pagerank.yml
agent/: Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
agent/providers/: __init__.py  anthropic.py  ollama.py  openai_compatible.py
config/: experiments.yaml  predatory_issns.txt  source-rate-limits.yaml  stopwords.txt  synonyms.json
docs/: account-checklist.md  architecture.md  orchestrator-acknowledgement.md  orchestrator-plan.md
docs/a11y/: manual-test.md
docs/api/: events.md  openapi.yaml  websocket.md
docs/experiments/: README.md  coi_demotion.md  recency_half_life.md  rrf_k_value.md  vector_weight_in_rrf.md
docs/launch/: blog-post.md  gate.md  show-hn.md
docs/rfcs/: README.md
docs/runbooks/: indexer-dlq.md  indexer-lag.md  ingester-stuck.md  llm-proxy-error-spike.md  recall-fanout-broken.md  rollback.md  search-availability.md  search-latency.md
docs/sources/: cdc-wonder.md  chembl.md  cochrane.md  core.md  crossref.md  disgenet.md  drugbank.md  ema.md  fda.md  guidelines.md  health-canada.md  hpo.md  ictrp.md  mhra.md  nih-reporter.md  nsf.md  omim.md  open-payments.md  openalex.md  pmc-oa.md  pmda.md  preprint.md  pubmed.md  tga.md  trials.md  unpaywall.md
docs/status/: 2026-04-24.md  2026-04-25.md  2026-04-26.md  2026-04-27.md
embedder/: Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
eval/: compare.py  interleaving.py  interleaving_test.py  queries.jsonl  run.py
frontend/: .lighthouserc.json  README.md  next.config.js  package.json  playwright.config.ts  sentry.client.config.ts  sentry.server.config.ts  tsconfig.json
frontend/app/: globals.css  layout.tsx  not-found.tsx  page.tsx  sitemap.ts
frontend/components/: ByokKeyManager.tsx  COIBadge.tsx  CitationGraph.tsx  DisclaimerBanner.tsx  FacetSidebar.tsx  KeyboardHelp.tsx  RecallTicker.tsx  ResultCard.tsx  ResultsStream.tsx  SearchInput.tsx  SkipNav.tsx  TierPicker.tsx  WebLLMSetup.tsx
frontend/lib/: store.ts  webllm-tools.ts
frontend/public/: robots.txt
gateway/: Dockerfile  README.md  docker-compose.yml  package.json  tsconfig.json
gateway/src/: app.module.ts  health.controller.ts  main.ts  schema.graphql
index/: Dockerfile  README.md  docker-compose.yml  go.mod
infra/: .env.example  .sops.yaml  README.md  docker-compose.nas.yml  docker-compose.yml
infra/bigquery/: README.md  (+1 more)
ingest/: go.mod
mcp-server/: Dockerfile  README.md  docker-compose.yml  package.json  tsconfig.json
process/: Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
process/parsers/: __init__.py  fda.py  generic.py  preprint.py  pubmed.py  trials.py
process/tests/: test_author_payment_joiner.py  test_chunker.py  test_generic_parser.py  test_salience.py
process/utils/: author_payment_joiner.py  chunker.py  config.py  embedder_client.py  entity_linker.py  r2_client.py  salience.py
prompts/: agent_system.md
proto/: buf.gen.yaml  buf.yaml
scorer/: Dockerfile  README.md  bm25.py  citation.py  docker-compose.yml  fusion.py  http_server.py  ltr.py  main.py  pyproject.toml  recency.py  vector.py
scorer/scripts/: pull_clicks.py  shadow_deploy.py  train_ltr.py
scorer/tests/: test_fusion.py  test_ltr.py  test_recency.py
workers/: README.md
(+184 files in other folders)
