[project]
name = "evidencelens-agent"
version = "0.1.0"
description = "BYOK SSE proxy with Anthropic + OpenAI-compat + Ollama (spec section 5.7)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.28.0",
    "anthropic>=0.40.0",
    "openai>=1.55.0",
    "asyncpg>=0.30.0",
    "redis>=5.2.0",
    "structlog>=24.4.0",
    "opentelemetry-sdk>=1.28.0",
    "opentelemetry-instrumentation-fastapi>=0.49b0",
    "opentelemetry-exporter-otlp>=1.28.0",
]
[project.optional-dependencies]
dev = ["pytest>=8.3.0", "pytest-asyncio>=0.24.0", "ruff>=0.7.0"]
