[project]
name = "evidencelens-processor"
version = "0.1.0"
description = "Parse + normalize + entity-link + chunk + embed + COI-join + publish (spec section 5.2)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "nats-py>=2.9.0",
    "google-cloud-pubsub>=2.27.0",
    "boto3>=1.35.0",
    "asyncpg>=0.30.0",
    "redis>=5.2.0",
    "httpx>=0.28.0",
    "lxml>=5.3.0",
    "rapidfuzz>=3.10.0",
    "tiktoken>=0.8.0",
    "grpcio>=1.68.0",
    "protobuf>=5.28.0",
    "structlog>=24.4.0",
    "opentelemetry-sdk>=1.28.0",
    "opentelemetry-instrumentation-fastapi>=0.49b0",
    "opentelemetry-instrumentation-asyncpg>=0.49b0",
    "opentelemetry-instrumentation-grpc>=0.49b0",
    "opentelemetry-exporter-otlp>=1.28.0",
]

# Heavy ML deps moved to extras so CI test installs stay under 1 GB.
# Production NAS deploys install with `pip install .[ml]`.
[project.optional-dependencies]
ml = [
    "spacy>=3.7.0",
    "scispacy>=0.5.5",
    # scispaCy's en_core_sci_lg model is downloaded at runtime, not via pip.
]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "vcrpy>=6.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"
