[project]
name = "evidencelens-scorer"
version = "0.1.0"
description = "Hybrid scorer pool (BM25 + vector + citation + recency + RRF + LTR) per spec section 5.5"
requires-python = ">=3.12"
dependencies = [
    "grpcio>=1.68.0",
    "grpcio-tools>=1.68.0",
    "grpcio-health-checking>=1.68.0",
    "grpcio-reflection>=1.68.0",
    "protobuf>=5.28.0",
    "meilisearch>=0.31.0",
    "qdrant-client>=1.12.0",
    "neo4j>=5.27.0",
    "xgboost>=2.1.0",
    "numpy>=2.1.0",
    "structlog>=24.4.0",
    "opentelemetry-sdk>=1.28.0",
    "opentelemetry-instrumentation-grpc>=0.49b0",
    "opentelemetry-exporter-otlp>=1.28.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.3.0", "pytest-asyncio>=0.24.0", "ruff>=0.7.0", "mypy>=1.13.0"]
